tests/custom/STARIS_2022/operation-type-errors/and-type-error/stderr.expected
Error:
    and-type-error.essence:2:19:
  |
2 | such that b = and(1, 3)
  |                   ^
Type error:
	Expected: "Collection of boolean"
	Got: int

and-type-error.essence:2:22:
  |
2 | such that b = and(1, 3)
  |                      ^
Unexpected argument

cat: *.solution: No such file or directory
